--- a/index.ipynb
+++ b/index.ipynb
@@ -354,15 +354,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5.63495440e+07 6.72854838e+07 1.92503884e+08 4.28891984e+07\n",
-      " 6.02173247e+07 1.85506728e+08 7.89012571e+07 4.95941658e+07]\n",
+      "[1.38627231e+08 6.66357661e+07 6.99584437e+07 4.53131503e+07\n",
+      " 4.03545398e+07 1.27707118e+08 9.16187852e+07 9.83646416e+07\n",
+      " 3.93537412e+07 3.24828236e+08 2.50671746e+07 2.78139136e+08\n",
+      " 2.66398334e+07 7.40281845e+07 1.14480949e+08 6.59773432e+07\n",
+      " 4.71305360e+07 5.21429663e+07 1.48430431e+08 6.84960914e+07\n",
+      " 1.16436419e+08 3.45908682e+07]\n",
       "     domgross\n",
       "28   46000903\n",
       "13   33345833\n",
@@ -376,7 +380,7 @@
     }
    ],
    "source": [
-    "print(rfr.predict(X_test))\n",
+    "print(rfr.predict(X_train))\n",
     "print(y_test)"
    ]
   },
