--- a/index.ipynb
+++ b/index.ipynb
@@ -354,19 +354,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.38627231e+08 6.66357661e+07 6.99584437e+07 4.53131503e+07\n",
-      " 4.03545398e+07 1.27707118e+08 9.16187852e+07 9.83646416e+07\n",
-      " 3.93537412e+07 3.24828236e+08 2.50671746e+07 2.78139136e+08\n",
-      " 2.66398334e+07 7.40281845e+07 1.14480949e+08 6.59773432e+07\n",
-      " 4.71305360e+07 5.21429663e+07 1.48430431e+08 6.84960914e+07\n",
-      " 1.16436419e+08 3.45908682e+07]\n",
+      "138627230.954\n",
       "     domgross\n",
       "10  148430908\n",
       "3    75612460\n",
@@ -394,7 +389,7 @@
     }
    ],
    "source": [
-    "print(rfr.predict(X_train))\n",
+    "print(rfr.predict(X_train)[0])\n",
     "print(y_train)"
    ]
   },
