--- a/index.ipynb
+++ b/index.ipynb
@@ -340,7 +340,7 @@
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.linear_model import *\n",
-    "rfr = LinearRegression().fit(X_train,y_train)\n",
+    "rfr = Random().fit(X_train,y_train)\n",
     "rfr.score(X_test,y_test)\n"
    ]
   },
