--- a/index.ipynb
+++ b/index.ipynb
@@ -568,7 +568,7 @@
    ],
    "source": [
     "# code for test set bias and variance\n",
-    "variance(y_hat)"
+    "variance(rfr)"
    ]
   },
   {
